# claude-memory-oss

./: .gitignore  README.md  hooks-example.json  pyproject.toml
docker/: docker-compose.yml
scripts/: async-extract  inject-session-state
src/claude_memory/: __init__.py  auto_learn.py  server.py
