[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-memory"
version = "0.1.0"
description = "Local long-term memory for Claude Code via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "httpx>=0.27.0",
]

[project.scripts]
claude-memory = "claude_memory.server:run"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_memory"]
